Fix image link symbol and help dialogue spacing. Fix arrow in dropdown menu

--- a/wagtailatomicadmin/static_src/wagtailadmin/scss/components/_forms.scss
+++ b/wagtailatomicadmin/static_src/wagtailadmin/scss/components/_forms.scss
@@ -120,9 +120,9 @@ select,
         border-radius: 0 6px 6px 0;
         z-index: 0;
         position: absolute;
-        right: 0;
+        right: 14px;
         top: 1px;
-        bottom: 0;
+        bottom: 1px;
         width: 1.5em;
         font-family: wagtail;
         content: 'q';
@@ -832,7 +832,7 @@ li.focused > .help {
         }
 
         &:before {
-            left: 0.3em;
+            left: 0.7em;
         }
 
         &:after {
@@ -1217,6 +1217,7 @@ li.inline:first-child {
 
     .help {
         opacity: 1;
+        padding-left: 1.5em;
     }
 
     .fields {
